--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div id="exercise">
     <h2 id="moduleTitle"></h2>
     <div id="currentWord" style="font-size: 40px; margin: 20px 0;"></div>
-    <input type="text" id="userInput" placeholder="Scrivi la lettura">
+    <input type="text" id="userInput" placeholder="Scrivi la lettura in hiragana">
     <button onclick="checkAnswer()">Verifica</button>
     <p id="feedback"></p>
     <button onclick="goBack()">🔙 Torna al menu</button>
@@ -73,7 +73,7 @@
         .then(data => {
           vocab = data.map(row => ({
             kanji: row.Kanji || row.Kana,
-            reading: row.hiragana || row.romaji,
+            reading: row.hiragana, // Solo hiragana, niente fallback
             meaning: row.significato || ""
           }));
           document.getElementById('menu').style.display = 'none';
@@ -127,8 +127,12 @@
       } else if (stage === "correction") {
         if (input === current.reading) {
           repeatCount++;
-          const incitazioni = ["もう一回！", "いいぞ！", "あと一回！"];
-          feedback.innerHTML = `✍️ ${incitazioni[repeatCount - 1]}`;
+          const encouragements = [
+            "✍️ もう一回！ (もういっかい) – Ancora una volta!",
+            "✍️ いいぞ！ (いいぞ) – Ben fatto!",
+            "✍️ あと一回！ (あといっかい) – Ancora una sola!"
+          ];
+          feedback.innerHTML = encouragements[repeatCount - 1];
           if (repeatCount >= 3) {
             stage = "blind";
             updateDisplay();
@@ -141,8 +145,12 @@
       } else if (stage === "blind") {
         if (input === current.reading) {
           blindCount++;
-          const applausi = ["よくできました！", "完璧！", "素晴らしい！"];
-          feedback.innerHTML = `✅ ${applausi[blindCount - 1]}`;
+          const cheers = [
+            "✅ よくできました！ (よくできました) – Ottimo lavoro!",
+            "✅ 完璧！ (かんぺき) – Perfetto!",
+            "✅ 素晴らしい！ (すばらしい) – Meraviglioso!"
+          ];
+          feedback.innerHTML = cheers[blindCount - 1];
           if (blindCount >= 3) {
             setTimeout(getRandomWord, 1000);
           }
