--- a/index.html
+++ b/index.html
@@ -2,286 +2,61 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Nihongo JIM – Allenamento</title>
+  <title>Allenamento Giapponese</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: #f5f5f5;
-      padding: 40px;
+    #login-screen {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
-    h1, h2 {
-      text-align: center;
-    }
-    button, input {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin: 5px;
-      cursor: pointer;
-    }
-    #menu button {
-      width: 250px;
-    }
-    #exercise, #studyView {
+    #main-app {
       display: none;
-      background-color: #1e1e1e;
-      padding: 30px;
-      border: 1px solid #444;
-      border-radius: 10px;
-      text-align: center;
-      margin-top: 20px;
-      max-width: 600px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      border: 1px solid #444;
-      padding: 8px;
-    }
-    th {
-      background-color: #2a2a2a;
-    }
-    .correct { color: lightgreen; }
-    .incorrect { color: #ff5555; }
-    .answer { color: #ccc; font-style: italic; margin-top: 10px; }
-    #error {
-      margin-top: 20px;
-      color: #ff5555;
     }
   </style>
 </head>
 <body>
 
-  <h1>Nihongo JIM – Allenamento</h1>
-  <div id="menu">
-    <p>Scegli il tipo di allenamento o di studio:</p>
-
-    <button onclick="startGame('Hiragana')">🟢 Hiragana</button>
-    <button onclick="viewStudy('Hiragana')">📚 Studio</button><br>
-
-    <button onclick="startGame('Katakana')">🔴 Katakana</button>
-    <button onclick="viewStudy('Katakana')">📚 Studio</button><br>
-
-    <button onclick="startGame('N5')">🥷 Vocabolario N5</button>
-    <button onclick="viewStudy('N5')">📚 Studio</button>
-
-    <p id="error"></p>
+  <div id="login-screen">
+    <h2>Benvenuto! Inserisci il tuo nome utente</h2>
+    <input type="text" id="username" placeholder="Nome utente" />
+    <button onclick="login()">Accedi</button>
   </div>
 
-  <div id="exercise">
-    <h2 id="moduleTitle"></h2>
-    <div id="currentWord" style="font-size: 40px; margin: 20px 0;"></div>
-    <input type="text" id="userInput" placeholder="Scrivi la lettura">
-    <button onclick="checkAnswer()">Verifica</button>
-    <p id="feedback"></p>
-    <button onclick="goBack()">🔙 Torna al menu</button>
-  </div>
-
-  <div id="studyView">
-    <h2 id="studyTitle">📚 Studio</h2>
-    <table id="studyTable">
-      <thead>
-        <tr>
-          <th>Kanji / Kana</th>
-          <th>Hiragana</th>
-          <th>Romaji</th>
-          <th>Significato</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <button onclick="goBack()">🔙 Torna al menu</button>
+  <div id="main-app">
+    <!-- Qui metti il contenuto della tua app giapponese esistente -->
+    <h1>Allenamento in Giapponese</h1>
+    <!-- ... -->
   </div>
 
   <script>
-    const sheetBase = 'https://opensheet.elk.sh/1rAWuzob8dLBdZ9hyg287wefYT57CqOoB6CAogz-HKFA/';
-    let vocab = [];
-    let current = null;
-    let currentModule = "";
-    let kanaMode = false;
-    let stage = "normal";
-    let repeatCount = 0;
-    let blindCount = 0;
+    async function login() {
+      const username = document.getElementById("username").value.trim();
+      if (!username) {
+        alert("Inserisci un nome utente valido.");
+        return;
+      }
 
-    function getActualSheetName(sheetName) {
-      return sheetName === "N5" ? "n5_section" : sheetName;
-    }
+      const response = await fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec", {
+        method: "POST",
+        body: JSON.stringify({ username }),
+        headers: {
+          "Content-Type": "application/json"
+        }
+      });
 
-    function startGame(sheetName) {
-      currentModule = sheetName;
-      kanaMode = (sheetName === "Hiragana" || sheetName === "Katakana");
-      const errorBox = document.getElementById('error');
-      errorBox.innerText = "";
-      const actualSheetName = getActualSheetName(sheetName);
+      const result = await response.json();
 
-      fetch(sheetBase + actualSheetName)
-        .then(res => {
-          if (!res.ok) throw new Error("Modulo non trovato: " + sheetName);
-          return res.json();
-        })
-        .then(data => {
-          vocab = data.map(row => ({
-            kanji: row.Kanji || row.Kana || "",
-            kana: row.Kana || "",
-            hiragana: row.hiragana || "",
-            romaji: row.romaji || "",
-            meaning: row.significato || ""
-          }));
-          document.getElementById('menu').style.display = 'none';
-          document.getElementById('studyView').style.display = 'none';
-          document.getElementById('exercise').style.display = 'block';
-          document.getElementById('moduleTitle').innerText = `Modulo: ${sheetName}`;
-          document.getElementById('userInput').placeholder = kanaMode ? "Scrivi in romaji" : "Scrivi in hiragana";
-          getRandomWord();
-        })
-        .catch(err => {
-          console.error(err);
-          errorBox.innerText = "❌ Errore nel caricamento del modulo '" + sheetName + "'.";
-        });
-    }
-
-    function viewStudy(sheetName) {
-      const errorBox = document.getElementById('error');
-      errorBox.innerText = "";
-      const actualSheetName = getActualSheetName(sheetName);
-
-      fetch(sheetBase + actualSheetName)
-        .then(res => {
-          if (!res.ok) throw new Error("Modulo non trovato: " + sheetName);
-          return res.json();
-        })
-        .then(data => {
-          const rows = data.map(row => ({
-            kanji: row.Kanji || row.Kana || "",
-            kana: row.Kana || "",
-            hiragana: row.hiragana || "",
-            romaji: row.romaji || "",
-            meaning: row.significato || ""
-          }));
-          const tableBody = document.querySelector("#studyTable tbody");
-          tableBody.innerHTML = "";
-          rows.forEach(r => {
-            const tr = document.createElement("tr");
-            tr.innerHTML = `
-              <td>${r.kanji}</td>
-              <td>${r.hiragana || "-"}</td>
-              <td>${r.romaji || "-"}</td>
-              <td>${r.meaning || "-"}</td>
-            `;
-            tableBody.appendChild(tr);
-          });
-          document.getElementById('menu').style.display = 'none';
-          document.getElementById('exercise').style.display = 'none';
-          document.getElementById('studyView').style.display = 'block';
-          document.getElementById('studyTitle').innerText = `📚 Studio: ${sheetName}`;
-        })
-        .catch(err => {
-          console.error(err);
-          errorBox.innerText = "❌ Errore nel caricamento del modulo '" + sheetName + "'.";
-        });
-    }
-
-    function getRandomWord() {
-      stage = "normal";
-      repeatCount = 0;
-      blindCount = 0;
-      current = vocab[Math.floor(Math.random() * vocab.length)];
-      updateDisplay();
-    }
-
-    function updateDisplay() {
-      const display = document.getElementById('currentWord');
-      document.getElementById('userInput').value = '';
-      document.getElementById('feedback').innerText = '';
-
-      if (stage === "normal") {
-        display.innerText = kanaMode ? current.kana : current.kanji;
-      } else if (stage === "correction") {
-        const answerText = kanaMode 
-          ? `${current.romaji}` 
-          : `${current.hiragana} – ${current.meaning}`;
-        display.innerHTML = `${kanaMode ? current.kana : current.kanji}<br><span class='answer'>${answerText}</span>`;
-      } else if (stage === "blind") {
-        display.innerText = kanaMode ? current.kana : current.kanji;
+      if (result.success) {
+        document.getElementById("login-screen").style.display = "none";
+        document.getElementById("main-app").style.display = "block";
+        // Salva l'utente in una variabile globale per usarlo dopo
+        window.loggedUser = username;
+      } else {
+        alert("Errore durante il login.");
       }
     }
-
-    function checkAnswer() {
-      const inputField = document.getElementById('userInput');
-      const input = inputField.value.trim().toLowerCase();
-      const feedback = document.getElementById('feedback');
-      inputField.value = '';
-
-      if (!current) return;
-
-      const expected = kanaMode ? current.romaji.toLowerCase() : current.hiragana;
-
-      if (stage === "normal") {
-        if (input === expected) {
-          feedback.innerHTML = "✅ <span class='correct'>Corretto!</span>";
-          setTimeout(getRandomWord, 1000);
-        } else {
-          stage = "correction";
-          repeatCount = 0;
-          feedback.innerHTML = "❌ Sbagliato!";
-          updateDisplay();
-        }
-
-      } else if (stage === "correction") {
-        if (input === expected) {
-          repeatCount++;
-          const encouragements = [
-            "✍️ もう一回！ (もういっかい) – Un'altra volta!",
-            "✍️ いいぞ！ (いいぞ) – Grande!",
-            "✍️ あと一回！ (あといっかい) – Solo un'altra!"
-          ];
-          feedback.innerHTML = encouragements[repeatCount - 1];
-          if (repeatCount >= 3) {
-            stage = "blind";
-            updateDisplay();
-          }
-        } else {
-          repeatCount = 0;
-          feedback.innerHTML = "❌ Sbagliato di nuovo. Torniamo da capo!";
-        }
-
-      } else if (stage === "blind") {
-        if (input === expected) {
-          blindCount++;
-          const cheers = [
-            "✅ よくできました！ (よくできました) – Ottimo lavoro!",
-            "✅ 完璧！ (かんぺき) – Perfetto!",
-            "✅ 素晴らしい！ (すばらしい) – Meraviglioso!"
-          ];
-          feedback.innerHTML = cheers[blindCount - 1];
-          if (blindCount >= 3) {
-            setTimeout(getRandomWord, 1000);
-          }
-        } else {
-          feedback.innerHTML = "❌ Sbagliato. Torniamo alla ripetizione con aiuti!";
-          stage = "correction";
-          repeatCount = 0;
-          updateDisplay();
-        }
-      }
-    }
-
-    function goBack() {
-      document.getElementById('exercise').style.display = 'none';
-      document.getElementById('studyView').style.display = 'none';
-      document.getElementById('menu').style.display = 'block';
-    }
-
-    document.getElementById("userInput").addEventListener("keyup", function(event) {
-      if (event.key === "Enter") checkAnswer();
-    });
   </script>
-
 </body>
 </html>
