--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
   <meta charset="UTF-8">
   <title>Allenamento Giapponese</title>
   <style>
-    #login-screen {
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+    }
+
+    #login-screen, #main-app {
+      width: 100vw;
+      height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      flex-direction: column;
     }
+
+    #login-screen {
+      background-color: #1e1e1e;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 5px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      width: 250px;
+      background-color: #2c2c2c;
+      color: #fff;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #4CAF50;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
     #main-app {
       display: none;
     }
@@ -25,9 +65,10 @@
   </div>
 
   <div id="main-app">
-    <!-- Qui metti il contenuto della tua app giapponese esistente -->
+    <!-- QUI il contenuto della tua app attuale -->
     <h1>Allenamento in Giapponese</h1>
-    <!-- ... -->
+    <p>Benvenuto, <span id="user-display"></span>!</p>
+    <!-- ...il resto della tua app JS qui... -->
   </div>
 
   <script>
@@ -38,23 +79,29 @@
         return;
       }
 
-      const response = await fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec", {
-        method: "POST",
-        body: JSON.stringify({ username }),
-        headers: {
-          "Content-Type": "application/json"
+      try {
+        const response = await fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec", {
+          method: "POST",
+          body: JSON.stringify({ username }),
+          headers: {
+            "Content-Type": "application/json"
+          }
+        });
+
+        const result = await response.json();
+
+        if (result.success) {
+          // Mostra la tua app
+          document.getElementById("login-screen").style.display = "none";
+          document.getElementById("main-app").style.display = "flex";
+          document.getElementById("user-display").innerText = username;
+          window.loggedUser = username;
+        } else {
+          alert("Errore durante il login.");
         }
-      });
-
-      const result = await response.json();
-
-      if (result.success) {
-        document.getElementById("login-screen").style.display = "none";
-        document.getElementById("main-app").style.display = "block";
-        // Salva l'utente in una variabile globale per usarlo dopo
-        window.loggedUser = username;
-      } else {
-        alert("Errore durante il login.");
+      } catch (error) {
+        console.error("Errore nella richiesta al backend:", error);
+        alert("Errore di rete durante il login.");
       }
     }
   </script>
