--- a/index.html
+++ b/index.html
@@ -1,108 +1,110 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Allenamento Giapponese</title>
   <style>
     body {
-      margin: 0;
-      font-family: "Segoe UI", sans-serif;
       background-color: #121212;
-      color: #ffffff;
-    }
-
-    #login-screen, #main-app {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    #login-screen {
-      background-color: #1e1e1e;
-    }
-
-    input[type="text"] {
-      padding: 10px;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 5px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      width: 250px;
-      background-color: #2c2c2c;
       color: #fff;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .termine {
+      margin: 20px;
     }
 
     button {
       padding: 10px 20px;
+      margin: 10px;
       font-size: 1.1rem;
-      border: none;
-      border-radius: 5px;
-      background-color: #4CAF50;
-      color: white;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
 
-    button:hover {
-      background-color: #45a049;
-    }
-
-    #main-app {
-      display: none;
+    #progresso-container {
+      margin-top: 30px;
+      border-top: 1px solid #444;
+      padding-top: 20px;
     }
   </style>
 </head>
 <body>
 
-  <div id="login-screen">
-    <h2>Benvenuto! Inserisci il tuo nome utente</h2>
-    <input type="text" id="username" placeholder="Nome utente" />
-    <button onclick="login()">Accedi</button>
+  <h1>Allenamento Giapponese - Capitolo 1</h1>
+
+  <div class="termine" data-parola="nihon">
+    <p>Traduci: Giappone</p>
+    <button onclick="rispondi('nihon', true)">nihon ✅</button>
+    <button onclick="rispondi('nihon', false)">arigatou ❌</button>
   </div>
 
-  <div id="main-app">
-    <!-- Qui inserisci la tua app esistente -->
-    <h1>Allenamento in Giapponese</h1>
-    <p>Benvenuto, <span id="user-display"></span>!</p>
-    <!-- Qui puoi inserire esercizi, logiche ecc -->
+  <div class="termine" data-parola="arigatou">
+    <p>Traduci: Grazie</p>
+    <button onclick="rispondi('arigatou', true)">arigatou ✅</button>
+    <button onclick="rispondi('arigatou', false)">neko ❌</button>
   </div>
+
+  <div class="termine" data-parola="neko">
+    <p>Traduci: Gatto</p>
+    <button onclick="rispondi('neko', true)">neko ✅</button>
+    <button onclick="rispondi('neko', false)">inu ❌</button>
+  </div>
+
+  <div id="progresso-container"></div>
 
   <script>
-    async function login() {
-      const username = document.getElementById("username").value.trim();
-      if (!username) {
-        alert("Inserisci un nome utente valido.");
-        return;
+    // Aggiorna punteggio per parola
+    function aggiornaProgresso(capitolo, parola, punteggio) {
+      const salvataggio = JSON.parse(localStorage.getItem("progresso")) || {};
+
+      if (!salvataggio[capitolo]) {
+        salvataggio[capitolo] = {};
       }
 
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbyOdCMSDE7Ebz0kQvRUQ4c0ZyerYzEJra-VkZM2qLYZxXRQLP0mICLWA29TvFB9QRCUMA/exec", {
-          method: "POST",
-          body: JSON.stringify({ username }),
-          headers: {
-            "Content-Type": "application/json"
-          }
-        });
+      salvataggio[capitolo][parola] = punteggio;
 
-        const result = await response.json();
+      const valori = Object.entries(salvataggio[capitolo])
+        .filter(([key]) => key !== "score")
+        .map(([_, val]) => val);
 
-        if (result.success) {
-          document.getElementById("login-screen").style.display = "none";
-          document.getElementById("main-app").style.display = "flex";
-          document.getElementById("user-display").innerText = username;
-          window.loggedUser = username;
-        } else {
-          alert("Errore durante il login: " + result.message);
-        }
-      } catch (error) {
-        console.error("Errore nella richiesta:", error);
-        alert("Errore di rete durante il login.");
+      const media = valori.length > 0
+        ? Math.round((valori.reduce((a, b) => a + b, 0) / valori.length) * 10 * 100) / 100
+        : 0;
+
+      salvataggio[capitolo].score = media;
+
+      localStorage.setItem("progresso", JSON.stringify(salvataggio));
+      mostraProgressoHTML();
+    }
+
+    function getProgresso() {
+      return JSON.parse(localStorage.getItem("progresso")) || {};
+    }
+
+    function mostraProgressoHTML() {
+      const progresso = getProgresso();
+      const container = document.getElementById("progresso-container");
+      container.innerHTML = "<h2>Progresso</h2>";
+
+      for (const [capitolo, dati] of Object.entries(progresso)) {
+        const score = dati.score || 0;
+        const div = document.createElement("div");
+        div.innerHTML = `<strong>${capitolo}</strong>: ${score}/10`;
+        container.appendChild(div);
       }
     }
+
+    function rispondi(parola, corretta) {
+      const punteggio = corretta ? 1 : 0;
+      aggiornaProgresso("capitolo1", parola, punteggio);
+      alert(corretta ? "Corretto! +1 punto" : "Sbagliato! 0 punti");
+    }
+
+    // Carica i progressi al caricamento della pagina
+    window.onload = mostraProgressoHTML;
   </script>
+
 </body>
 </html>
