--- a/index.html
+++ b/index.html
@@ -1,109 +1,286 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Allenamento Giapponese</title>
+  <title>Nihongo JIM – Allenamento</title>
   <style>
     body {
+      font-family: 'Segoe UI', sans-serif;
       background-color: #121212;
-      color: #fff;
-      font-family: sans-serif;
+      color: #f5f5f5;
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1, h2 {
       text-align: center;
-      padding: 20px;
     }
-
-    .termine {
-      margin: 20px;
-    }
-
-    button {
+    button, input {
+      font-size: 18px;
       padding: 10px 20px;
-      margin: 10px;
-      font-size: 1.1rem;
+      margin: 5px;
       cursor: pointer;
     }
-
-    #progresso-container {
-      margin-top: 30px;
-      border-top: 1px solid #444;
-      padding-top: 20px;
+    #menu button {
+      width: 250px;
+    }
+    #exercise, #studyView {
+      display: none;
+      background-color: #1e1e1e;
+      padding: 30px;
+      border: 1px solid #444;
+      border-radius: 10px;
+      text-align: center;
+      margin-top: 20px;
+      max-width: 600px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #444;
+      padding: 8px;
+    }
+    th {
+      background-color: #2a2a2a;
+    }
+    .correct { color: lightgreen; }
+    .incorrect { color: #ff5555; }
+    .answer { color: #ccc; font-style: italic; margin-top: 10px; }
+    #error {
+      margin-top: 20px;
+      color: #ff5555;
     }
   </style>
 </head>
 <body>
 
-  <h1>Allenamento Giapponese - Capitolo 1</h1>
+  <h1>Nihongo JIM – Allenamento</h1>
+  <div id="menu">
+    <p>Scegli il tipo di allenamento o di studio:</p>
 
-  <div class="termine" data-parola="nihon">
-    <p>Traduci: Giappone</p>
-    <button onclick="rispondi('nihon', true)">nihon ✅</button>
-    <button onclick="rispondi('nihon', false)">arigatou ❌</button>
+    <button onclick="startGame('Hiragana')">🟢 Hiragana</button>
+    <button onclick="viewStudy('Hiragana')">📚 Studio</button><br>
+
+    <button onclick="startGame('Katakana')">🔴 Katakana</button>
+    <button onclick="viewStudy('Katakana')">📚 Studio</button><br>
+
+    <button onclick="startGame('N5')">🥷 Vocabolario N5</button>
+    <button onclick="viewStudy('N5')">📚 Studio</button>
+
+    <p id="error"></p>
   </div>
 
-  <div class="termine" data-parola="arigatou">
-    <p>Traduci: Grazie</p>
-    <button onclick="rispondi('arigatou', true)">arigatou ✅</button>
-    <button onclick="rispondi('arigatou', false)">neko ❌</button>
+  <div id="exercise">
+    <h2 id="moduleTitle"></h2>
+    <div id="currentWord" style="font-size: 40px; margin: 20px 0;"></div>
+    <input type="text" id="userInput" placeholder="Scrivi la lettura">
+    <button onclick="checkAnswer()">Verifica</button>
+    <p id="feedback"></p>
+    <button onclick="goBack()">🔙 Torna al menu</button>
   </div>
 
-  <div class="termine" data-parola="neko">
-    <p>Traduci: Gatto</p>
-    <button onclick="rispondi('neko', true)">neko ✅</button>
-    <button onclick="rispondi('neko', false)">inu ❌</button>
+  <div id="studyView">
+    <h2 id="studyTitle">📚 Studio</h2>
+    <table id="studyTable">
+      <thead>
+        <tr>
+          <th>Kanji / Kana</th>
+          <th>Hiragana</th>
+          <th>Romaji</th>
+          <th>Significato</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <button onclick="goBack()">🔙 Torna al menu</button>
   </div>
-
-  <div id="progresso-container"></div>
 
   <script>
-    // Aggiorna punteggio per parola
-    function aggiornaProgresso(capitolo, parola, punteggio) {
-      const salvataggio = JSON.parse(localStorage.getItem("progresso")) || {};
+    const sheetBase = 'https://opensheet.elk.sh/1rAWuzob8dLBdZ9hyg287wefYT57CqOoB6CAogz-HKFA/';
+    let vocab = [];
+    let current = null;
+    let currentModule = "";
+    let kanaMode = false;
+    let stage = "normal";
+    let repeatCount = 0;
+    let blindCount = 0;
 
-      if (!salvataggio[capitolo]) {
-        salvataggio[capitolo] = {};
+    function getActualSheetName(sheetName) {
+      return sheetName === "N5" ? "n5_section" : sheetName;
+    }
+
+    function startGame(sheetName) {
+      currentModule = sheetName;
+      kanaMode = (sheetName === "Hiragana" || sheetName === "Katakana");
+      const errorBox = document.getElementById('error');
+      errorBox.innerText = "";
+      const actualSheetName = getActualSheetName(sheetName);
+
+      fetch(sheetBase + actualSheetName)
+        .then(res => {
+          if (!res.ok) throw new Error("Modulo non trovato: " + sheetName);
+          return res.json();
+        })
+        .then(data => {
+          vocab = data.map(row => ({
+            kanji: row.Kanji || row.Kana || "",
+            kana: row.Kana || "",
+            hiragana: row.hiragana || "",
+            romaji: row.romaji || "",
+            meaning: row.significato || ""
+          }));
+          document.getElementById('menu').style.display = 'none';
+          document.getElementById('studyView').style.display = 'none';
+          document.getElementById('exercise').style.display = 'block';
+          document.getElementById('moduleTitle').innerText = `Modulo: ${sheetName}`;
+          document.getElementById('userInput').placeholder = kanaMode ? "Scrivi in romaji" : "Scrivi in hiragana";
+          getRandomWord();
+        })
+        .catch(err => {
+          console.error(err);
+          errorBox.innerText = "❌ Errore nel caricamento del modulo '" + sheetName + "'.";
+        });
+    }
+
+    function viewStudy(sheetName) {
+      const errorBox = document.getElementById('error');
+      errorBox.innerText = "";
+      const actualSheetName = getActualSheetName(sheetName);
+
+      fetch(sheetBase + actualSheetName)
+        .then(res => {
+          if (!res.ok) throw new Error("Modulo non trovato: " + sheetName);
+          return res.json();
+        })
+        .then(data => {
+          const rows = data.map(row => ({
+            kanji: row.Kanji || row.Kana || "",
+            kana: row.Kana || "",
+            hiragana: row.hiragana || "",
+            romaji: row.romaji || "",
+            meaning: row.significato || ""
+          }));
+          const tableBody = document.querySelector("#studyTable tbody");
+          tableBody.innerHTML = "";
+          rows.forEach(r => {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `
+              <td>${r.kanji}</td>
+              <td>${r.hiragana || "-"}</td>
+              <td>${r.romaji || "-"}</td>
+              <td>${r.meaning || "-"}</td>
+            `;
+            tableBody.appendChild(tr);
+          });
+          document.getElementById('menu').style.display = 'none';
+          document.getElementById('exercise').style.display = 'none';
+          document.getElementById('studyView').style.display = 'block';
+          document.getElementById('studyTitle').innerText = `📚 Studio: ${sheetName}`;
+        })
+        .catch(err => {
+          console.error(err);
+          errorBox.innerText = "❌ Errore nel caricamento del modulo '" + sheetName + "'.";
+        });
+    }
+
+    function getRandomWord() {
+      stage = "normal";
+      repeatCount = 0;
+      blindCount = 0;
+      current = vocab[Math.floor(Math.random() * vocab.length)];
+      updateDisplay();
+    }
+
+    function updateDisplay() {
+      const display = document.getElementById('currentWord');
+      document.getElementById('userInput').value = '';
+      document.getElementById('feedback').innerText = '';
+
+      if (stage === "normal") {
+        display.innerText = kanaMode ? current.kana : current.kanji;
+      } else if (stage === "correction") {
+        const answerText = kanaMode 
+          ? `${current.romaji}` 
+          : `${current.hiragana} – ${current.meaning}`;
+        display.innerHTML = `${kanaMode ? current.kana : current.kanji}<br><span class='answer'>${answerText}</span>`;
+      } else if (stage === "blind") {
+        display.innerText = kanaMode ? current.kana : current.kanji;
       }
-
-      salvataggio[capitolo][parola] = punteggio;
-
-      const valori = Object.entries(salvataggio[capitolo])
-        .filter(([key]) => key !== "score")
-        .map(([_, val]) => val);
-
-      const media = valori.length > 0
-        ? Math.round((valori.reduce((a, b) => a + b, 0) / valori.length) * 10 * 100) / 100
-        : 0;
-
-      salvataggio[capitolo].score = media;
-
-      localStorage.setItem("progresso", JSON.stringify(salvataggio));
-      mostraProgressoHTML();
     }
 
-    function getProgresso() {
-      return JSON.parse(localStorage.getItem("progresso")) || {};
-    }
+    function checkAnswer() {
+      const inputField = document.getElementById('userInput');
+      const input = inputField.value.trim().toLowerCase();
+      const feedback = document.getElementById('feedback');
+      inputField.value = '';
 
-    function mostraProgressoHTML() {
-      const progresso = getProgresso();
-      const container = document.getElementById("progresso-container");
-      container.innerHTML = "<h2>Progresso</h2>";
+      if (!current) return;
 
-      for (const [capitolo, dati] of Object.entries(progresso)) {
-        const score = dati.score || 0;
-        const div = document.createElement("div");
-        div.innerHTML = `<strong>${capitolo}</strong>: ${score}/10`;
-        container.appendChild(div);
+      const expected = kanaMode ? current.romaji.toLowerCase() : current.hiragana;
+
+      if (stage === "normal") {
+        if (input === expected) {
+          feedback.innerHTML = "✅ <span class='correct'>Corretto!</span>";
+          setTimeout(getRandomWord, 1000);
+        } else {
+          stage = "correction";
+          repeatCount = 0;
+          feedback.innerHTML = "❌ Sbagliato!";
+          updateDisplay();
+        }
+
+      } else if (stage === "correction") {
+        if (input === expected) {
+          repeatCount++;
+          const encouragements = [
+            "✍️ もう一回！ (もういっかい) – Un'altra volta!",
+            "✍️ いいぞ！ (いいぞ) – Grande!",
+            "✍️ あと一回！ (あといっかい) – Solo un'altra!"
+          ];
+          feedback.innerHTML = encouragements[repeatCount - 1];
+          if (repeatCount >= 3) {
+            stage = "blind";
+            updateDisplay();
+          }
+        } else {
+          repeatCount = 0;
+          feedback.innerHTML = "❌ Sbagliato di nuovo. Torniamo da capo!";
+        }
+
+      } else if (stage === "blind") {
+        if (input === expected) {
+          blindCount++;
+          const cheers = [
+            "✅ よくできました！ (よくできました) – Ottimo lavoro!",
+            "✅ 完璧！ (かんぺき) – Perfetto!",
+            "✅ 素晴らしい！ (すばらしい) – Meraviglioso!"
+          ];
+          feedback.innerHTML = cheers[blindCount - 1];
+          if (blindCount >= 3) {
+            setTimeout(getRandomWord, 1000);
+          }
+        } else {
+          feedback.innerHTML = "❌ Sbagliato. Torniamo alla ripetizione con aiuti!";
+          stage = "correction";
+          repeatCount = 0;
+          updateDisplay();
+        }
       }
     }
 
-    function rispondi(parola, corretta) {
-      const punteggio = corretta ? 1 : 0;
-      aggiornaProgresso("capitolo1", parola, punteggio);
-      alert(corretta ? "Corretto! +1 punto" : "Sbagliato! 0 punti");
+    function goBack() {
+      document.getElementById('exercise').style.display = 'none';
+      document.getElementById('studyView').style.display = 'none';
+      document.getElementById('menu').style.display = 'block';
     }
 
-    // Carica i progressi al caricamento della pagina
-    window.onload = mostraProgressoHTML;
+    document.getElementById("userInput").addEventListener("keyup", function(event) {
+      if (event.key === "Enter") checkAnswer();
+    });
   </script>
 
 </body>
