--- a/pages/Hiragana.html
+++ b/pages/Hiragana.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <title>Hiragana</title>
+  <meta charset="UTF-8">
+  <title>Modulo</title>
+  <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    <h1>Modulo: Hiragana</h1>
-    <div id="content">Caricamento...</div>
+  <h1 id="pageTitle">Caricamento...</h1>
+  <div id="content">📡 Attendere, sto caricando il contenuto...</div>
+  <p id="error" style="color: red; margin-top: 20px;"></p>
 
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const type = params.get("type") || "Studio";
+  <script>
+    // Ottieni il nome del modulo dal nome del file HTML
+    const fileName = location.pathname.split('/').pop().split('.html')[0];
+    const moduleName = decodeURIComponent(fileName);
 
-        // Inserisci il tuo ID documento di Google Drive (pubblico o accessibile)
-        const documentId = "ID_GOOGLE_DRIVE_HIRAGANA";
+    // Ottieni il tipo dal parametro GET (es: ?type=Studio)
+    const params = new URLSearchParams(window.location.search);
+    const type = params.get("type") || "Studio";
 
-        async function loadContent() {
-            try {
-                const response = await fetch(`https://docs.google.com/document/d/${documentId}/export?format=txt`);
-                if (!response.ok) throw new Error("Errore nel caricamento");
+    // Inserisci qui l'ID del tuo Google Sheet
+    const sheetId = "1rAWuzob8dLBdZ9hyg287wefYT57CqOoB6CAogz-HKFA"; // <-- SOSTITUISCI con il tuo ID se cambia
 
-                const text = await response.text();
-                document.getElementById("content").innerText = `Tipo: ${type}\n\n${text}`;
-            } catch (err) {
-                alert("Impossibile caricare il modulo. Torno all'indice.");
-                window.location.href = "../index.html";
-            }
-        }
+    // URL del tab corrispondente (deve avere il nome uguale al file, es. Hiragana, Katakana...)
+    const sheetUrl = `https://opensheet.elk.sh/${sheetId}/${moduleName}`;
 
-        loadContent();
-    </script>
+    document.title = `${moduleName} – ${type}`;
+    document.getElementById("pageTitle").innerText = `📘 ${moduleName} – ${type}`;
+
+    fetch(sheetUrl)
+      .then(res => {
+        if (!res.ok) throw new Error("Foglio non trovato o non pubblico.");
+        return res.json();
+      })
+      .then(data => {
+        const contentDiv = document.getElementById("content");
+        if (!data.length) throw new Error("Il modulo è vuoto.");
+        
+        // Crea una tabella di esempio (puoi adattarla in base al tipo)
+        const table = document.createElement("table");
+        table.innerHTML = `
+          <thead>
+            <tr>
+              <th>Kanji / Kana</th>
+              <th>Hiragana</th>
+              <th>Romaji</th>
+              <th>Significato</th>
+            </tr>
+          </thead>
+          <tbody>
+            ${data.map(row => `
+              <tr>
+                <td>${row.Kanji || row.Kana || "-"}</td>
+                <td>${row.hiragana || "-"}</td>
+                <td>${row.romaji || "-"}</td>
+                <td>${row.significato || "-"}</td>
+              </tr>
+            `).join("")}
+          </tbody>
+        `;
+        contentDiv.innerHTML = "";
+        contentDiv.appendChild(table);
+      })
+      .catch(err => {
+        console.error(err);
+        document.getElementById("error").innerText = `❌ Errore: ${err.message}`;
+        setTimeout(() => window.location.href = "../index.html", 3000);
+      });
+  </script>
 </body>
 </html>
